# 2023_hw_engineer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  robot.cpp  robot.hpp
Match/: Match.cpp  Match.hpp
alogrithm/: alogrithm.cpp  alogrithm.hpp
config/: camera.yml  marker_config.yml  mode.yml  param.yml
device/: camera.cpp  camera.hpp  communicator.cpp  communicator.hpp  gpio.cpp  gpio.hpp
device/MVCamera/: README.md
pose/: slove.cpp  slove.hpp
utils/: params.cpp  params.hpp  record.cpp  record.hpp  utils.cpp  utils.hpp
utils/Camera/Data/: 041010720631.mvdat
utils/Camera/log/: error_20230131-172735.15838  error_20230131-181457.17420  error_20230131-190633.20160  error_20230131-190648.20258  error_20230131-191028.21175  error_20230131-202445.27603  error_20230201-171801.18242
